add look around function Optimizing kswapd to improve recycling efficiency

--- a/mm/Kconfig
+++ b/mm/Kconfig
@@ -859,4 +859,12 @@ config ARCH_HAS_HUGEPD
 config MAPPING_DIRTY_HELPERS
         bool
 
+config LOOK_AROUND
+     bool "Look around strategy optimization rmap"
+     default n
+     help
+       This feature is inspired by the MG-LRU strategy,
+       aimed at optimizing the kswapd recycling process and
+       improving memory recycling efficiency.
+
 endmenu
