--- a/default.config
+++ b/default.config
@@ -964,6 +964,7 @@ CONFIG_ARCH_USES_HIGH_VMA_FLAGS=y
 # CONFIG_GUP_BENCHMARK is not set
 # CONFIG_READ_ONLY_THP_FOR_FS is not set
 CONFIG_ARCH_HAS_PTE_SPECIAL=y
+CONFIG_LOOK_AROUND=y
 # end of Memory Management options
 
 CONFIG_NET=y
